--- a/view/README
+++ b/view/README
@@ -1,5 +1,4 @@
-Some stuff
-1) Заменить в errors и зависимых от него файлах vector на Vector_2d
-2) В mainwindow.cpp во время инициализации и объявления обектов AV и AME используется фиксированная длина <vector>, равная 5.
-Однако количество данных, введённых пользователем, будет разным. Надо подумать о том, как можно инициализировать и объявлять
-<vector> (в последствии Vector_2d) различной длины.
+TO DO LIST
+1) Сделать проверку на длину x и y
+2) Добавить в подсказки информацию о вводе через пробел
+3) Сделать проверку на то, что пользователь вводит данные не через пробел -- выводить окно с предупреждением
