--- a/view/README
+++ b/view/README
@@ -1,4 +1,4 @@
 TO DO LIST
-1) Сделать проверку на длину x и y
-2) Добавить в подсказки информацию о вводе через пробел
-3) Сделать проверку на то, что пользователь вводит данные не через пробел -- выводить окно с предупреждением
+1) Сделать проверку на длину x и y, проверку на то, что пользователь вводит данные не через пробел, вводит невалидные символы -- выводить окно с предупреждением (Аня)
+2) Добавить в подсказки информацию о вводе через пробел (Аня)
+3) Сделать пустой конструктор класса (Наташа)
